--- a/assets/scss/layout/_theme.scss
+++ b/assets/scss/layout/_theme.scss
@@ -5,6 +5,10 @@ $theme-colors: (
   "secondary": #28a745
 );
 
+$theme-colors: (
+  "custom-color": #900
+);
+
 $body-color: #192534;
 
 $border-radius: 1.25rem;
